Fixed Hero section rendering bug on mobile
Fixed Hero section rendering bug where the bottom portion of the
Hero's content was covered by the mobile browser's toolbar.
Added media queries to custom-styles.css that detect mobile
browsers by checking if the browser has hover capabilities and
the pointer is coarse. It's not entirely fool-proof for tablets
or desktops with touchscreens however, but should cover most use
cases.

--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -9,7 +9,26 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  transition: background 10s;
+}
+
+/* if device has a touch scree and is mobile */
+@media (hover: none) and (any-pointer: coarse) {
+  .hero-mobile-height-fix {
+    /* Specific fix for mobile height of the hero and prevent the mobile browser
+       tool bar from covering its content. */
+
+    display: 'flex';
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+    height: 100dvh;
+  }
+}
+
+/* if device is not mobile */
+@media (any-pointer: fine) {
+  .hero-mobile-height-fix {
+    @apply h-screen;
+  }
 }
 
 .footer-tool-links {
